--- a/src/app/components/app-root/app.component.html
+++ b/src/app/components/app-root/app.component.html
@@ -11,33 +11,33 @@
         <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active"><a routerLink="/" class="nav-link">Home</a></li>
         <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item" routerLinkActive="active"><a routerLink="/about" class="nav-link">About</a></li>
         <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item" routerLinkActive="active"><a routerLink="/schools" class="nav-link">Schools</a></li>
-        <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item dropdown" routerLinkActive="active">
-          <a style="cursor: pointer" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Projects
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" [routerLink]="['/projects', 'MedicalFacilities']">Medical Facilities</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/projects', 'OrphanCareProgram']">Orphan Care Program</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/projects', 'CleanWaterForAll']">Clean Water for All</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/projects', 'TechnicalEducation']">Technical Education</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/projects', 'ScholarshipsForHigherEducation']">Scholarships for Higher Education</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/projects', 'EnvironmentalSustainability']">Environmental Sustainability</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/projects', 'FoodSupportProgram']">Food Support Program</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/projects', 'EducationThroughGarbage']">Education Through Garbage</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/projects', 'Qurbani']">Qurbani</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/projects', 'HelpADream']">Help a Dream</a>
-          </div>
-        </li>
-        <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item" routerLinkActive="active"><a routerLink="/gallery" class="nav-link">Gallery</a></li>
+<!--        <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item dropdown" routerLinkActive="active">-->
+<!--          <a style="cursor: pointer" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--            Projects-->
+<!--          </a>-->
+<!--          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">-->
+<!--            <a class="dropdown-item" [routerLink]="['/projects', 'MedicalFacilities']">Medical Facilities</a>-->
+<!--            <div class="dropdown-divider"></div>-->
+<!--            <a class="dropdown-item" [routerLink]="['/projects', 'OrphanCareProgram']">Orphan Care Program</a>-->
+<!--            <div class="dropdown-divider"></div>-->
+<!--            <a class="dropdown-item" [routerLink]="['/projects', 'CleanWaterForAll']">Clean Water for All</a>-->
+<!--            <div class="dropdown-divider"></div>-->
+<!--            <a class="dropdown-item" [routerLink]="['/projects', 'TechnicalEducation']">Technical Education</a>-->
+<!--            <div class="dropdown-divider"></div>-->
+<!--            <a class="dropdown-item" [routerLink]="['/projects', 'ScholarshipsForHigherEducation']">Scholarships for Higher Education</a>-->
+<!--            <div class="dropdown-divider"></div>-->
+<!--            <a class="dropdown-item" [routerLink]="['/projects', 'EnvironmentalSustainability']">Environmental Sustainability</a>-->
+<!--            <div class="dropdown-divider"></div>-->
+<!--            <a class="dropdown-item" [routerLink]="['/projects', 'FoodSupportProgram']">Food Support Program</a>-->
+<!--            <div class="dropdown-divider"></div>-->
+<!--            <a class="dropdown-item" [routerLink]="['/projects', 'EducationThroughGarbage']">Education Through Garbage</a>-->
+<!--            <div class="dropdown-divider"></div>-->
+<!--            <a class="dropdown-item" [routerLink]="['/projects', 'Qurbani']">Qurbani</a>-->
+<!--            <div class="dropdown-divider"></div>-->
+<!--            <a class="dropdown-item" [routerLink]="['/projects', 'HelpADream']">Help a Dream</a>-->
+<!--          </div>-->
+<!--        </li>-->
+<!--        <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item" routerLinkActive="active"><a routerLink="/gallery" class="nav-link">Gallery</a></li>-->
         <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item" routerLinkActive="active"><a routerLink="/contact" class="nav-link">Contact</a></li>
         <li data-toggle="collapse" data-target=".navbar-collapse.show" class="ml-4" routerLinkActive="active"><p><a routerLink="/donate" class="btn btn-white px-3 py-2 mt-2">Donate Now</a></p></li>
       </ul>
