--- a/src/app/pages/schools/schools.component.html
+++ b/src/app/pages/schools/schools.component.html
@@ -1,6 +1,6 @@
 <app-banner [text]="'Schools'" [image]="'../../../assets/images/schools_banner.jpg'"></app-banner>
 <section id=timeline>
-  <h1>Schools and College</h1>
+  <h1>To obtain GRIP Selection Certificate</h1>
   <!--  <p class="leader">All cards must be the same height and width for space calculations on large screens.</p>-->
   <div class="demo-card-wrapper" >
     <div *ngFor="let school of schools; let i=index"  class="demo-card demo-card--step{{i+1}}" >
@@ -8,13 +8,13 @@
         <div class="number-box">
           <span>0{{i+1}}</span>
         </div>
-        <h2><span class="small">{{school.date}}</span> {{school.heading}}</h2>
+        <h2><span class="small"></span> {{school.heading}}</h2>
       </div>
       <div class="body">
         <p>
           {{school.text}}
-          <a class="dialog-link" *ngIf="school.heading == 'AL-KHAIR CAMPUS 1' || school.heading == 'AL-KHAIR CAMPUS 2'
-           || school.heading == 'AL-KHAIR CAMPUS 3' || school.heading == 'AL-KHAIR COLLEGE' || school.heading == 'AL-KHAIR CAMPUS 5'
+          <a class="dialog-link" *ngIf="school.heading == 'Confirm Your Internship Function' || school.heading == 'Join TSF Network'
+           || school.heading == 'Share your Preferred Internship Experience' || school.heading == 'Create your profile on My Credible Info' || school.heading == 'AL-KHAIR CAMPUS 5'
            || school.heading == 'AL-KHAIR CAMPUS 6'"
              (click)="openDialog(school.heading)">Read More</a>
         </p>
