--- a/src/app/components/app-root/app.component.html
+++ b/src/app/components/app-root/app.component.html
@@ -1,7 +1,7 @@
 <!--navbar starts here-->
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
   <div class="container">
-    <img style="width: 100px" src="assets/images/idara-alkair-logo-white.png" class="navbar-brand" routerLink="/"/>
+    <img style="width: 60px" src="assets/images/idara-alkair-logo-white.png" class="navbar-brand" routerLink="/"/>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="oi oi-menu"></span> Menu
     </button>
@@ -10,7 +10,7 @@
       <ul class="navbar-nav ml-auto">
         <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active"><a routerLink="/" class="nav-link">Home</a></li>
         <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item" routerLinkActive="active"><a routerLink="/about" class="nav-link">About</a></li>
-        <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item" routerLinkActive="active"><a routerLink="/schools" class="nav-link">Schools</a></li>
+        <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item" routerLinkActive="active"><a routerLink="/schools" class="nav-link">GRIP Selection</a></li>
 <!--        <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item dropdown" routerLinkActive="active">-->
 <!--          <a style="cursor: pointer" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
 <!--            Projects-->
