--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -9,43 +9,45 @@
       <div class="col-md-6 pl-md-5" data-aos="fade-up">
         <h2 class="mb-4">{{heading}}</h2>
         <div [innerHTML]="text" ></div>
+        <h2 class="mb-4">About GRIP</h2>
+        <div>The Graduate Rotational Internship Program is an unique offer for students and recent graduates to experience and join TSF. This program enables students to be professionally capable, and entrepreneurial. Apart from skill specific tasks, we encourage interns to build a credible professional profile.</div>
+
       </div>
     </div>
   </div>
 </section>
 
-<div class="container">
-  <div class="row justify-content-center mb-5 pb-3">
-    <div class="col-md-7 heading-section  text-center" data-aos="fade-up">
-      <h2 class="mb-4">Our Supporters</h2>
-    </div>
-    <!-- Slider main container -->
-    <div [swiper]="config" class="swiper-container">
+<!--<div class="container">-->
+<!--  <div class="row justify-content-center mb-5 pb-3">-->
+<!--    <div class="col-md-7 heading-section  text-center" data-aos="fade-up">-->
+<!--      <h2 class="mb-4">Our Supporters</h2>-->
+<!--    </div>-->
+<!--    &lt;!&ndash; Slider main container &ndash;&gt;-->
+<!--    <div [swiper]="config" class="swiper-container">-->
 
-      <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
+<!--      &lt;!&ndash; Additional required wrapper &ndash;&gt;-->
+<!--      <div class="swiper-wrapper">-->
 
-        <!-- Slides -->
-        <div *ngFor="let logo of logos" class="swiper-slide align-self-center"><img width="150" [src]="logo" alt="Company Logo"></div>
+<!--        &lt;!&ndash; Slides &ndash;&gt;-->
+<!--        <div *ngFor="let logo of logos" class="swiper-slide align-self-center"><img width="150" [src]="logo" alt="Company Logo"></div>-->
 
-      </div>
-      <!-- If we need pagination -->
-      <!--  <div class="swiper-pagination"></div>-->
+<!--      </div>-->
+<!--      &lt;!&ndash; If we need pagination &ndash;&gt;-->
+<!--      &lt;!&ndash;  <div class="swiper-pagination"></div>&ndash;&gt;-->
 
-    </div>
-  </div>
-</div>
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
-<section class="ftco-section">
-  <div class="container">
-    <div class="row justify-content-center mb-5 pb-3">
-      <div class="col-md-7 heading-section  text-center" data-aos="fade-up">
-        <h2 class="mb-4">Our Sustainable Activities with Japanese and South Korean Organizations</h2>
-      </div>
-    </div>
-    <h3>1. Used Clothes Collection</h3>
-    <h3>2. Karkhana Project</h3>
-  </div>
-</section>
+<!--<section class="ftco-section">-->
+<!--  <div class="container">-->
+<!--    <div class="row justify-content-center mb-5 pb-3">-->
+<!--      <div class="col-md-7 heading-section  text-center" data-aos="fade-up">-->
+<!--             </div>-->
+<!--    </div>-->
+<!--&lt;!&ndash;    <h3>1. Used Clothes Collection</h3>&ndash;&gt;-->
+<!--&lt;!&ndash;    <h3>2. Karkhana Project</h3>&ndash;&gt;-->
+<!--  </div>-->
+<!--</section>-->
 
 
