--- a/src/app/components/app-root/app.component.html
+++ b/src/app/components/app-root/app.component.html
@@ -58,7 +58,7 @@
       <div class="col-md-4">
         <div class="ftco-footer-widget mb-4">
           <img src="assets/images/idara-alkair-logo-white.png" class="navbar-brand mb-3" routerLink="/"/>
-          <p class="text-justify">Idara Alkhair is a non profitable private organization which has been working for the cause of education for last 30 years. Our mission is to spread the light of education in underprivileged areas of Pakistan. Idara Al-Khair welfare society was established in the year 1987 and registered with the Government of Sindh, Pakistan.</p>
+          <p class="text-justify">The Graduate Rotational Internship Program is an unique offer for students and recent graduates to experience and join TSF. This program enables students to be professionally capable, and entrepreneurial. Apart from skill specific tasks, we encourage interns to build a credible professional profile.</p>
         </div>
       </div>
       <div class="col-md-4">
@@ -108,7 +108,7 @@
           <h2 class="ftco-heading-2">Have Questions?</h2>
           <div class="block-23 mb-3">
             <ul>
-              <li><span class="icon icon-map-marker"></span><span class="text">R-510/15 Federal B Area, Karachi</span></li>
+              <li><span class="icon icon-map-marker"></span><span class="text">The Hanger, 21 Heng Mui Keng Terrace, Singapore, Singapore 119613, SG</span></li>
               <li><a href="tel:923002992469"><span class="icon icon-phone"></span><span class="text">+92 300 299 2469</span></a></li>
               <li><a href="mailto:info@idaraalkhair.com"><span class="icon icon-envelope"></span><span class="text">info@idaraalkhair.com</span></a></li>
             </ul>
@@ -119,7 +119,7 @@
           <li data-aos="fade-up"><a href="https://www.facebook.com/idaraalkhairwelfaresociety" target="_blank"><span style="color: white" class="icon-facebook"></span></a></li>
           <li data-aos="fade-up"><a href="https://www.instagram.com/idaraalkhair/" target="_blank"><span style="color: white" class="icon-instagram"></span></a></li>
           <li data-aos="fade-up"><a href="https://www.youtube.com/c/idaraalkhairwelfaresociety" target="_blank"><span style="color: white" class="icon-youtube-play"></span></a></li>
-          <!--            <li data-aos="fade-up" data-aos-once="true"><a href="https://www.linkedin.com/in/muhammad-mazahir-sheikh-26870b44/" target="_blank"><span class="icon-linkedin"></span></a></li>-->
+          <li data-aos="fade-up"><a href="https://www.linkedin.com/company/13625083" target="_blank"><span class="icon-linkedin"></span></a></li>
         </ul>
       </div>
     </div>
