--- a/src/app/components/app-root/app.component.html
+++ b/src/app/components/app-root/app.component.html
@@ -115,11 +115,11 @@
           </div>
         </div>
         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
-          <li data-aos="fade-up"><a href="https://twitter.com/idara_al" target="_blank"><span style="color: white" class="icon-twitter"></span></a></li>
-          <li data-aos="fade-up"><a href="https://www.facebook.com/idaraalkhairwelfaresociety" target="_blank"><span style="color: white" class="icon-facebook"></span></a></li>
-          <li data-aos="fade-up"><a href="https://www.instagram.com/idaraalkhair/" target="_blank"><span style="color: white" class="icon-instagram"></span></a></li>
-          <li data-aos="fade-up"><a href="https://www.youtube.com/c/idaraalkhairwelfaresociety" target="_blank"><span style="color: white" class="icon-youtube-play"></span></a></li>
-          <li data-aos="fade-up"><a href="https://www.linkedin.com/company/13625083" target="_blank"><span class="icon-linkedin"></span></a></li>
+          <li data-aos="fade-up"><a href="https://twitter.com/tsfsingapore" target="_blank"><span style="color: white" class="icon-twitter"></span></a></li>
+          <li data-aos="fade-up"><a href="https://www.facebook.com/thesparksfoundation.info" target="_blank"><span style="color: white" class="icon-facebook"></span></a></li>
+          <li data-aos="fade-up"><a href="https://www.instagram.com/thesparksfoundation.info/" target="_blank"><span style="color: white" class="icon-instagram"></span></a></li>
+<!--          <li data-aos="fade-up"><a href="https://www.youtube.com/c/idaraalkhairwelfaresociety" target="_blank"><span style="color: white" class="icon-youtube-play"></span></a></li>-->
+          <li data-aos="fade-up"><a href="https://www.linkedin.com/company/13625083" target="_blank"><span style="color: white" class="icon-linkedin"></span></a></li>
         </ul>
       </div>
     </div>
@@ -127,7 +127,7 @@
       <div class="col-md-12 text-center my-4">
 
         <p>
-          Copyright &copy; 1987 - {{today | date:'yyyy'}} All rights reserved | Idara Al-Khair
+          Copyright &copy; 2003 - {{today | date:'yyyy'}} All rights reserved | TSF | GRIP
         </p>
       </div>
     </div>
