--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<script src="../about/about.component.ts"></script>
 <app-banner [text]="'Graduate Rotational Internship Program'" [image]="'../../../assets/images/banner.jpg'"></app-banner>
 <!--section below banner image-->
 <!--<section data-aos="fade-up" class="ftco-counter ftco-intro" id="section-counter">-->
