--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row d-flex">
       <div class="col-md-6 d-flex" data-aos="fade-up">
-        <div class="img img-about align-self-stretch" style="background-image: url('../../../assets/images/about.jpg'); width: 100%;"></div>
+        <div class="img img-about align-self-stretch" style="background-image: url('../../../assets/images/activities.png'); width: 100%;"></div>
       </div>
       <div class="col-md-6 pl-md-5" data-aos="fade-up">
         <h2 class="mb-4">{{heading}}</h2>
