--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,5 @@
 .causes-section{
-  background-image: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url('../../../assets/images/activities.jpg');
+  background-image: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url('../../../assets/images/about.jpg');
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
