--- a/src/styles.scss
+++ b/src/styles.scss
@@ -222,7 +222,7 @@ h1, h2, h3, h4, h5,
     left: 0;
     top: 0;
     margin-top: -130px;
-    background: #B0D85B!important;
+    background:#7198A9!important;
     box-shadow: 0 0 10px 0 rgba(0,0,0,.1);
     .nav-item {
       &.active {
