--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -10,13 +10,13 @@
         <p><span>Address:</span> {{address}}</p>
       </div>
       <div class="col-md-3">
-        <p><span>Phone:</span> <a [href]="'tel:' + phone.split(' ').join('')">	{{phone}}</a><br/><a class="ml-5" [href]="'tel:' + phone2.split(' ').join('')">	{{phone2}}</a></p>
+        <p><span>Phone:</span> <a [href]="'tel:' + phone.split(' ').join('')">	{{phone}}</a></p>
       </div>
       <div class="col-md-3">
-        <p><span>Email:</span> <a href="mailto:info@idaraalkhair.com">{{email}}</a></p>
+        <p><span>Email:</span> <a href="mailto:info@thesparksfoundation.sg">{{email}}</a></p>
       </div>
       <div class="col-md-3">
-        <p><span>Website:</span> <a href="#">{{website}}</a></p>
+        <p><span>Website:</span> <a target="_blank" [href]="website">{{website}}</a></p>
       </div>
     </div>
     <div class="row block-9">
@@ -67,8 +67,7 @@
       </div>
 
       <div class="col-md-6 col-xs-4" id="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7232.233055964844!2d67.06985407625426!3d24.996156081171!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb34123801a71e9%3A0xe5bac7442b1e8f41!2sIdara%20Al%20Khair%20Campus%201!5e0!3m2!1sen!2s!4v1595516863915!5m2!1sen!2s" width="600" height="450" frameborder="0" style="border:0;width: 100%" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-      </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d166728.44286306784!2d103.71507296592847!3d1.3207575651276071!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da1a55859a13f3%3A0xff68dba930304ddb!2sThe+Hangar+by+NUS+Enterprise!5e0!3m2!1sen!2ssg!4v1513412856624" width="600" height="450" frameborder="0" style="border:0" allowfullscreen=""></iframe>      </div>
     </div>
   </div>
 </section>
