--- a/src/app/components/app-root/app.component.html
+++ b/src/app/components/app-root/app.component.html
@@ -39,7 +39,7 @@
 <!--        </li>-->
 <!--        <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item" routerLinkActive="active"><a routerLink="/gallery" class="nav-link">Gallery</a></li>-->
         <li data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item" routerLinkActive="active"><a routerLink="/contact" class="nav-link">Contact</a></li>
-        <li data-toggle="collapse" data-target=".navbar-collapse.show" class="ml-4" routerLinkActive="active"><p><a routerLink="/donate" class="btn btn-white px-3 py-2 mt-2">Donate Now</a></p></li>
+<!--        <li data-toggle="collapse" data-target=".navbar-collapse.show" class="ml-4" routerLinkActive="active"><p><a routerLink="/donate" class="btn btn-white px-3 py-2 mt-2">Donate Now</a></p></li>-->
       </ul>
 
     </div>
@@ -109,8 +109,8 @@
           <div class="block-23 mb-3">
             <ul>
               <li><span class="icon icon-map-marker"></span><span class="text">The Hanger, 21 Heng Mui Keng Terrace, Singapore, Singapore 119613, SG</span></li>
-              <li><a href="tel:923002992469"><span class="icon icon-phone"></span><span class="text">+92 300 299 2469</span></a></li>
-              <li><a href="mailto:info@idaraalkhair.com"><span class="icon icon-envelope"></span><span class="text">info@idaraalkhair.com</span></a></li>
+              <li><a href="tel:923002992469"><span class="icon icon-phone"></span><span class="text">+65-8402-8590</span></a></li>
+              <li><a href="mailto:info@idaraalkhair.com"><span class="icon icon-envelope"></span><span class="text">info@thesparksfoundation.sg</span></a></li>
             </ul>
           </div>
         </div>
