footer links update

--- a/src/app/components/app-root/app.component.html
+++ b/src/app/components/app-root/app.component.html
@@ -109,8 +109,8 @@
           <div class="block-23 mb-3">
             <ul>
               <li><span class="icon icon-map-marker"></span><span class="text">The Hanger, 21 Heng Mui Keng Terrace, Singapore, Singapore 119613, SG</span></li>
-              <li><a href="tel:923002992469"><span class="icon icon-phone"></span><span class="text">+65-8402-8590</span></a></li>
-              <li><a href="mailto:info@idaraalkhair.com"><span class="icon icon-envelope"></span><span class="text">info@thesparksfoundation.sg</span></a></li>
+              <li><a href="tel:+6584028590"><span class="icon icon-phone"></span><span class="text">+65-8402-8590</span></a></li>
+              <li><a href="mailto:info@thesparksfoundation.sg"><span class="icon icon-envelope"></span><span class="text">info@thesparksfoundation.sg</span></a></li>
             </ul>
           </div>
         </div>
