--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -10,7 +10,7 @@
         <p><span>Address:</span> {{address}}</p>
       </div>
       <div class="col-md-3">
-        <p><span>Phone:</span> <a [href]="'tel:' + phone.split(' ').join('')">	{{phone}}</a></p>
+        <p><span>Phone:</span> <a [href]="'tel:' + phone.split('-').join('')">	{{phone}}</a></p>
       </div>
       <div class="col-md-3">
         <p><span>Email:</span> <a href="mailto:info@thesparksfoundation.sg">{{email}}</a></p>
